fixed some layout problems and added order date and time

--- a/src/app/order-list/details-modal/details-modal.component.css
+++ b/src/app/order-list/details-modal/details-modal.component.css
@@ -8,6 +8,11 @@ table > thead {
     color: white;
 }
 
+.btn {
+    background-color: darkred;
+    color: white;
+}
+
 @media only screen and (max-width: 345px) {
     
     table {
