--- a/src/app/order-list/order-list.component.css
+++ b/src/app/order-list/order-list.component.css
@@ -5,10 +5,6 @@
     text-align: center;
 }
 
-.alert {
-    width: 70%;
-}
-
 h1 {
     margin-bottom: 40px;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -18,6 +14,14 @@ h1 {
 .row > table > thead {
     background-color: darkred;
     color: white;
+}
+
+#td-hour {
+    min-width: 110px;
+}
+
+#td-total {
+    min-width: 100px;
 }
 
 button {
